Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.14.1
-
-
0721c05771e89364023309fa252d70bdfafab2b4 (qt/qtmultimedia/5.14)
Description
For example some Basler industrial cameras don't work. There are no matching viewfinder formats so that supportedViewfinderSettings() returns an empty list. The camera itself supports at least MEDIASUBTYPE_Y800 format which apparently isn't supported by Qt.